# dev_flask

./: README.md  local.sqlite  pyproject.toml
apps/: app.py
apps/crud/: models.py  views.py
apps/crud/templates/crud/: create.html  index.html
apps/minimalapp/: app.py
apps/minimalapp/templates/: contact.html  contact_complete.html  contact_mail.html  index.html
migrations/versions/: 526be7475f32_.py
