[tool.poetry]
name = "dev_flask"
version = "0.1.0"
description = ""
authors = ["kai-5908"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.971"
python-dotenv = "^0.21.0"
email-validator = "^1.3.0"
Flask-DebugToolbar = "^0.13.1"
Flask-Mail = "^0.9.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
